fixed grid in purchase confirmed, and alignment, in card-grid by removing card-product width

--- a/src/main/resources/static/css/card.css
+++ b/src/main/resources/static/css/card.css
@@ -36,7 +36,6 @@
     justify-content: center;
     gap: 1rem;
     overflow: hidden;
-    width: fit-content;
 }
 
 svg {
